# pocket-f9p

./: .gitignore  LICENSE  README.md  README_jp.md  claude.md  pyproject.toml
case/: Exoskeleton-Bottom.3mf  Exoskeleton-Top.3mf  Pocket-F9P-Bottom.3mf  Pocket-F9P-Center.3mf  Pocket-F9P-Top.3mf
images/: figures.drawio
src/pocket_f9p/: __init__.py  main.py
